<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WPI Suite CS Anon</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">LOGIN</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="server_hint">server url</string>
    <string name="default_response">Waiting…</string>
    <string name="default_server">http://tiki.cs.wpi.edu:8080/WPISuiteMQP2013/API</string>
    <string name="title_activity_control_panel">ControlPanelActivity</string>
    <string name="logout">Logout</string>
    <string name="dialog_bad_network">Network connection is unavailable</string>
    <string name="retry">Retry</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_post_board">Post Board</string>
    <string name="refresh_button">REFRESH</string>
    <string name="submit_message_hint">Enter a message…</string>
    <string name="submit_button">SUBMIT</string>
    <string name="project_hint">project</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
