<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="textNoSuggestions"
        android:maxLines="1" />
    
    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1" />
    
    <EditText 
        android:id="@+id/project_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_hint"
        android:maxLines="1" />
    
    <EditText
        android:id="@+id/server_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_hint"
        android:inputType="textUri"
        android:maxLines="1"
        android:text="@string/default_server"/>
    
    <CheckBox
        android:id="@+id/rememberMe_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"/>
    
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/login_button" />


</LinearLayout> 